<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2011, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<!--
     This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options.
-->

<resources>

    <!-- Simple strings. -->
    <string name="app_name">ShelXle.Droid</string>
    <string name="Quit">Quit ShelXle.Droid</string>
    <string name="backToView">Back to structure view</string>
    <string name="Edit">Editor</string>
    <string name="adps">Elipsoids</string>
    <string name="fps">Show Frames Per Second</string>
    <string name="Refine">Refining &#8230;</string>
    <string name="highli">Syntax Highlighting</string>
    <string name="RefineXL">Refine current File with SHELXL</string>
    <string name="OpenResFile">Open SHELX res file</string>
    <string name="nodata">No Data</string>
    <string name="stop">Stop refinement!</string>
    <string name="loadres">Load results</string>
    <string name="labels">Labels</string>
    <string name="controt">Continuous Rotation</string>
    <string name="discard">Discard results</string>
    <string name="lstload">Load lst file</string>
    <string name="theListFileViewer">List-File Viewer</string>
    <string name="hires">High Resolution Atoms</string>
    <string name="test">
AU1   8    0.241430    0.496804    0.069973    11.00000    0.01708    0.01597 =\n
          0.01717   -0.00503   -0.00330   -0.00146\n
P1    6    0.390397    0.378696    0.215603    11.00000    0.01810    0.01584 =\n        
    </string>
    <string name="TheEditor">ShelXle.Droid Editor</string>
    <string name="Mail">Mail Logs for debugging</string>
</resources>
