<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/openMenu"
        android:alphabeticShortcut="o"
        android:icon="@drawable/open"
        android:numericShortcut="1"
        android:showAsAction="ifRoom"
        android:title="@string/OpenResFile">
    </item>
    <item
        android:id="@+id/editMenu"
        android:alphabeticShortcut="e"
        android:numericShortcut="2"
        android:title="@string/Edit">
    </item>
    <item
        android:id="@+id/refineMenu"
        android:alphabeticShortcut="r"
        android:icon="@drawable/refine"
        android:numericShortcut="3"
        android:showAsAction="ifRoom"
        android:title="@string/RefineXL">
    </item>
    <item
        android:id="@+id/quitMenu"
        android:alphabeticShortcut="q"
        android:icon="@drawable/cancel"
        android:numericShortcut="4"
        android:showAsAction="ifRoom"
        android:title="@string/Quit">
    </item>
    <item
        android:id="@+id/view"
        android:title="View">
        <menu>
            <item
                android:id="@+id/labelMenu"
                android:checkable="true"
                android:checked="false"
                android:enabled="true"
                android:icon="@drawable/labels"
                android:showAsAction="ifRoom"
                android:title="@string/labels">
            </item>
            <item
                android:id="@+id/niceAtoms"
                android:checkable="true"
                android:checked="false"
                android:enabled="true"
                android:title="@string/hires"
                android:titleCondensed="NiceAtoms"
                android:visible="true">
            </item>
            <item
                android:id="@+id/contRot"
                android:checkable="true"
                android:checked="false"
                android:icon="@drawable/everrotateleft"
                android:title="@string/controt"
                android:titleCondensed="contRot">
            </item>
            <item
                android:id="@+id/fps"
                android:checkable="true"
                android:checked="true"
                android:icon="@drawable/fps"
                android:title="@string/fps"
                android:titleCondensed="FPS">
            </item>
            <item
                android:id="@+id/adps"
                android:checkable="true"
                android:checked="true"
                android:enabled="true"
                android:icon="@drawable/adps"
                android:title="@string/adps"
                android:titleCondensed="ADPs"
                android:visible="true">
            </item>
            <item
                android:id="@+id/grow"
                android:icon="@drawable/grow"
                android:title="Grow+1"
                android:titleCondensed="grow">
            </item>
            <item
                android:id="@+id/fuse"
                android:icon="@drawable/fuse"
                android:title="Fuse"
                android:titleCondensed="fuse">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/lstMenu"
        android:alphabeticShortcut="l"
        android:numericShortcut="22"
        android:title="@string/lstload">
    </item>
    <item
        android:id="@+id/high"
        android:checkable="true"
        android:checked="true"
        android:title="@string/highli"
        android:titleCondensed="Highlighting">
    </item>
    <item
        android:id="@+id/mailMenu"
        android:alphabeticShortcut="m"
        android:numericShortcut="5"
        android:title="@string/Mail">
    </item>
    <item
        android:id="@+id/fourier"
        android:icon="@drawable/mapcontrol"
        android:title="Fourier maps"
        android:titleCondensed="fft">
        <menu>
            <item
                android:id="@+id/fftfcf"
                android:icon="@drawable/mapcontrol"
                android:title="calculate fft map"
                android:titleCondensed="fft">
            </item>
            <item
                android:id="@+id/fom"
                android:checkable="true"
                android:checked="true"
                android:icon="@drawable/fomap"
                android:title="show FoMap"
                android:titleCondensed="FoMap">
            </item>
            <item
                android:id="@+id/dim"
                android:checkable="true"
                android:checked="true"
                android:icon="@drawable/diffmap"
                android:title="Show Fo-Fc Map"
                android:titleCondensed="Fo-Fc Map">
            </item>
        </menu>
    </item>

</menu>